# public-icfpc-2025

./: README.md
goto/: dos.py  iod.py
goto/cpp/: icfpc_client.cpp  main.cpp  sa.cpp
goto/golang/: main.go
goto/golang/api/: api.go
goto/golang/domain/: heap.go  room.go
goto/golang/solver/: shot1.go  shot2.go
goto/golang/solver/aleph/: aleph.go
goto/lib/: icfpc_client.py  utils.py
goto/rust/src/: aleph.rs  api.rs  main.rs
goto/simulator/: README.md  pyproject.toml  selector_util.py  state.py  test_aleph_vau.py  test_for_moririn.py
moririn/: .gitignore
moririn/golang/: go.mod  main.go  solver_test.go
moririn/golang/data/: explore_history.json  graph.json  guess.json
moririn/golang/solver/: sign111.go  simple.go
moririn/golang/solver/aleph3__/: aleph3.go
moririn/rust/: Cargo.toml
moririn/rust/src/: aleph.rs  main.rs  main2.rs
moririn/simulator/: graph.py  init.py  main.py  test_graph.py
moririn/simulator/graph_data/template/: probatio.json
nkyos/rust/: Cargo.toml
nkyos/rust/src/: client.rs  day2_solver.rs  day3_solver.rs  day3_solver_2.rs  fill_table_manual.rs  ganba_dfs.rs  greedy.rs  main.rs  utils.rs
nkyos/rust/src/omori2/: api.rs  mod.rs  multiple_plan.rs  multiple_plan_random_write.rs  omori2_sa.rs
omori2/: Cargo.toml  a.ipynb  automata.ipynb  current_graph.dot  initial.dot  main.py  pyproject.toml  solution.dot  test copy.ipynb  test.ipynb
omori2/src/: api.rs  dfs.rs  main.rs  multiple_plan.rs  sa.rs
onikubo/: make_query.cpp  make_query_dup.cpp
