[package]
name = "icfpc"
version = "0.1.0"
edition = "2024"

[dependencies]

itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
fxhash = "0.2.1"
fixedbitset = "0.5.7"


[profile.profiling]
inherits = "release"
debug = true

[profile.release]
debug = true

[features]
default = [] # デフォルトではserdeを使わない（提出用）
local_env = []
