[project]
name = "icfpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aalpy>=1.5.1",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "z3>=0.2.0",
    "z3-solver>=4.15.3.0",
]
