[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
fxhash = "0.2.1"
